--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,33 @@
     <link rel="stylesheet" href="styles.css">
     <script src="calculator.js" defer></script>
 </head>
+
 <body>
-    
-</body>    
+    <div class="maincontainer">
+        <div class="textbox">0</div>
+        <div class="buttoncontainer">
+            <button class="regbutton" id="ac">AC</button>
+            <button class="regbutton plusorminus">+/-</button>
+            <button class="regbutton percent">%</button>
+            <button class="regbutton slash">/</button>
+            <button class="numbutton regbutton" id="7">7</button>
+            <button class="numbutton regbutton" id="8">8</button>
+            <button class="numbutton regbutton" id="9">9</button>
+            <button class="regbutton star">*</button>
+            <button class="numbutton regbutton" id="4">4</button>
+            <button class="numbutton regbutton" id="5">5</button>
+            <button class="numbutton regbutton" id="6">6</button>
+            <button class="regbutton dash">-</button>
+            <button class="numbutton regbutton" id="1">1</button>
+            <button class="numbutton regbutton" id="2">2</button>
+            <button class="numbutton regbutton" id="3">3</button>
+            <button class="regbutton plus">+</button>
+            <button class="numbutton zerobutton" id="0">0</button>
+            <button class="regbutton dot">.</button>
+            <button class="regbutton equals">=</button>
+        </div>
+    </div>
 </body>
+</body>
+
 </html>
