added decimal support, finished clear / AC button

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button class="numbutton regbutton" id="3">3</button>
             <button class="regbutton" id="plus">+</button>
             <button class="numbutton zerobutton" id="0">0</button>
-            <button class="regbutton dot">.</button>
+            <button class="regbutton" id="dot">.</button>
             <button class="regbutton" id="equals">=</button>
         </div>
     </div>
