made it look pretty wwith css color and font changes

--- a/index.html
+++ b/index.html
@@ -12,28 +12,30 @@
 
 <body>
     <div class="maincontainer">
+        <div class = "containertwo">
         <div class="textbox">0</div>
         <div class="buttoncontainer">
-            <button class="regbutton" id="ac">AC</button>
-            <button class="regbutton plusorminus">+/-</button>
-            <button class="regbutton percent">%</button>
-            <button class="regbutton" id="slash">/</button>
+            <button class="weird regbutton" id="ac">AC</button>
+            <button class="weird regbutton plusorminus">+/-</button>
+            <button class="weird regbutton percent">%</button>
+            <button class="op regbutton" id="slash">/</button>
             <button class="numbutton regbutton" id="7">7</button>
             <button class="numbutton regbutton" id="8">8</button>
             <button class="numbutton regbutton" id="9">9</button>
-            <button class="regbutton" id="star">*</button>
+            <button class="op regbutton" id="star">*</button>
             <button class="numbutton regbutton" id="4">4</button>
             <button class="numbutton regbutton" id="5">5</button>
             <button class="numbutton regbutton" id="6">6</button>
-            <button class="regbutton" id="dash">-</button>
+            <button class="op regbutton" id="dash">-</button>
             <button class="numbutton regbutton" id="1">1</button>
             <button class="numbutton regbutton" id="2">2</button>
             <button class="numbutton regbutton" id="3">3</button>
-            <button class="regbutton" id="plus">+</button>
+            <button class="op regbutton" id="plus">+</button>
             <button class="numbutton zerobutton" id="0">0</button>
             <button class="regbutton" id="dot">.</button>
-            <button class="regbutton" id="equals">=</button>
+            <button class="op regbutton" id="equals">=</button>
         </div>
+    </div>
     </div>
 </body>
 </body>
