fixed all bittons... possibly done

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="textbox">0</div>
         <div class="buttoncontainer">
             <button class="weird regbutton" id="ac">AC</button>
-            <button class="weird regbutton plusorminus">+/-</button>
-            <button class="weird regbutton percent">%</button>
+            <button class="weird regbutton" id="plusorminus">+/-</button>
+            <button class="weird regbutton"  id="percent">%</button>
             <button class="op regbutton" id="slash">/</button>
             <button class="numbutton regbutton" id="7">7</button>
             <button class="numbutton regbutton" id="8">8</button>
